# nasa-demo-api

./: .pre-commit-config.yaml  LICENSE  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  setup.cfg
api/: __init__.py  router.py  services.py
api/apod/: views.py
api/tests/apod/: conftest.py  test_views.py
settings/: config.py  settings.toml
static/css/: styles.css
templates/apod/: apod_detail.html
templates/common/: base.html
views/: apod_view.py  router.py
views/tests/: test_apod_view.py
