[tool.poetry]
name = "nasa-demo-api"
version = "0.1.0"
description = ""
authors = ["Zahid Kizmaz <tech@zahid.rocks>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
dynaconf = "^3.1.7"
aiohttp = {version = "^3.7.4", extras = ["speedups"]}
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
relint = "^1.2.1"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
requests-mock = "^1.9.3"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
